// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator component renders correctly 1`] = `
<div
  className="calc-container"
>
  <div
    className="display"
    data-testid="display"
  >
    0
  </div>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    AC
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    +/-
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    %
  </button>
  <button
    className="operator"
    onClick={[Function]}
    type="submit"
  >
    ÷
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    7
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    8
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    9
  </button>
  <button
    className="operator"
    onClick={[Function]}
    type="submit"
  >
    x
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    4
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    5
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    6
  </button>
  <button
    className="operator"
    onClick={[Function]}
    type="submit"
  >
    -
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    1
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    2
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    3
  </button>
  <button
    className="operator"
    onClick={[Function]}
    type="submit"
  >
    +
  </button>
  <button
    className="zero"
    onClick={[Function]}
    type="submit"
  >
    0
  </button>
  <button
    className="calc-key"
    onClick={[Function]}
    type="submit"
  >
    .
  </button>
  <button
    className="operator"
    onClick={[Function]}
    type="submit"
  >
    =
  </button>
</div>
`;

exports[`Calculator renders correctly 1`] = `
<div>
  <div
    class="calc-container"
  >
    <div
      class="display"
      data-testid="display"
    >
      0
    </div>
    <button
      class="calc-key"
      type="submit"
    >
      AC
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      +/-
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      %
    </button>
    <button
      class="operator"
      type="submit"
    >
      ÷
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      7
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      8
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      9
    </button>
    <button
      class="operator"
      type="submit"
    >
      x
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      4
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      5
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      6
    </button>
    <button
      class="operator"
      type="submit"
    >
      -
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      1
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      2
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      3
    </button>
    <button
      class="operator"
      type="submit"
    >
      +
    </button>
    <button
      class="zero"
      type="submit"
    >
      0
    </button>
    <button
      class="calc-key"
      type="submit"
    >
      .
    </button>
    <button
      class="operator"
      type="submit"
    >
      =
    </button>
  </div>
</div>
`;
